[build-system]
requires = ["setuptools>=42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-cookie-eval"
version = "0.1.0"
description = "A tool to track cookies and request headers while browsing websites"
requires-python = ">=3.8"
dependencies = [
    "playwright==1.42.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.setuptools]
py-modules = []